--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
 	<script src="vendor/angular/angular.js"></script>
 </head>
 <body ng-cloak class="container">
-	<!-- <h1>PÁGINA 63</h1> -->
+	<h1>PÁGINA 128</h1>
 	<div ng-view></div>
 	<script src="vendor/angular-route/angular-route.js"></script>
 	<script src="vendor/angular-resource/angular-resource.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/services/ContatosService.js"></script>
 	<script src="js/controllers/ContatosController.js"></script>
 </body>
 </html>
